# braces

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  ppb.py
.github/workflows/: CI.yml  binaries.yml
src/: cli.rs  error.rs  highlight.rs  lib.rs  processor.rs
src/highlight/: ansi.rs
src/processor/: expansion.rs  normalise.rs  ppb.rs  trie.rs
src/processor/trie/: ordered_map.rs
tests/: basic.rs  cli.rs  depth.rs  error.rs  helpers.rs  highlight.rs  max_size.rs  processor.rs  reprocess.rs  round_trip.rs  separators.rs  splitting.rs  validation.rs
tests/snapshots/: cli__comma_coloring.snap  cli__complex_real_world.snap  cli__cycling_colors.snap  cli__empty_braces.snap  cli__multiple_groups.snap  cli__nested_braces.snap  cli__no_braces.snap  cli__null_delimited_input.snap  cli__null_delimited_simple.snap  cli__null_delimited_with_newlines.snap  cli__only_braces.snap  cli__triple_nesting.snap  cli__unbalanced_braces_close.snap  cli__unbalanced_braces_open.snap  highlight__config_highlight_applies_to_output.snap  highlight__config_highlight_complex_real_world.snap  highlight__config_highlight_pretty_complex_real_world.snap  highlight__config_highlight_pretty_deep_nesting.snap  highlight__config_highlight_with_empty_braces.snap  highlight__config_highlight_with_nesting.snap  highlight__config_highlight_with_pretty.snap  highlight__config_highlight_with_sorting.snap
