[package]
authors = ["Louis Maddox <louismmx@gmail.com>"]
categories = ["command-line-utilities", "filesystem"]
description = "Convert path lists into compact brace expansion syntax"
edition = "2021"
keywords = ["braces", "expansion", "glob", "paths", "shell"]
license = "MIT OR Apache-2.0"
name = "braces"
readme = "README.md"
repository = "https://github.com/lmmx/braces"
rust-version = "1.70"
version = "0.1.2"

[[bin]]
name = "braces"
path = "src/cli.rs"
required-features = ["cli"]

[features]
cli = []
default = []

[dependencies]

[dev-dependencies]

[profile.release]
lto = true
strip = true

[package.metadata.binstall]
pkg-fmt = "tgz"
pkg-url = "https://github.com/lmmx/braces/releases/download/v{ version }/braces-{ target }.tar.gz"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
pkg-url = "https://github.com/lmmx/braces/releases/download/v{ version }/braces-aarch64-pc-windows-msvc.zip"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
pkg-url = "https://github.com/lmmx/braces/releases/download/v{ version }/braces-x86_64-pc-windows-msvc.zip"
