[package]
authors = ["Louis Maddox <louismmx@gmail.com>"]
categories = ["command-line-utilities", "filesystem"]
description = "Convert path lists into compact brace expansion syntax"
edition = "2021"
keywords = ["braces", "expansion", "glob", "paths", "shell"]
license = "MIT OR Apache-2.0"
name = "braces"
readme = "README.md"
repository = "https://github.com/lmmx/braces"
rust-version = "1.70"
version = "0.2.5"

[[bin]]
name = "braces"
path = "src/cli.rs"
required-features = ["cli"]

[features]
default = []
highlight = ["dep:anstream"]

cli = []
cli-full = ["cli-highlight"]

cli-highlight = ["cli", "highlight"]

[dependencies]
anstream = { optional = true, version = "0.6" }

[dev-dependencies]
assert_cmd = "2"
insta = "1.43.2"

[profile.release]
lto = true
strip = true

[package.metadata.binstall]
pkg-fmt = "tgz"
pkg-url = "https://github.com/lmmx/braces/releases/download/braces-v{ version }/braces-v{ version }-{ target }.tar.gz"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
pkg-url = "https://github.com/lmmx/braces/releases/download/braces-v{ version }/braces-v{ version }-aarch64-pc-windows-msvc.zip"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
pkg-url = "https://github.com/lmmx/braces/releases/download/braces-v{ version }/braces-v{ version }-x86_64-pc-windows-msvc.zip"
